--- a/css/contents.css
+++ b/css/contents.css
@@ -57,6 +57,12 @@ body{
     display: block;
     margin: 0 auto;
 }
+
+.container img{
+    width: 640px;
+    display: block;
+    margin: 0 auto;
+}
 .container h2{
     font-weight: normal;
     font-size: 1.4rem;
