--- a/css/about.css
+++ b/css/about.css
@@ -166,19 +166,24 @@ hr {
         padding-top: 15px;
         padding-left: 35px;
         padding-right: 35px;
-        padding-bottom: 100px;
+        padding-bottom: 72px;
     }
 
     .container h1{
+        font-size: 1.4rem;
         width: 300px;
+        margin: 0 auto 0;
     }
     .container img{
         width: 300px;
     }
     .container h2{
+        margin: 24px auto 0px;
+        font-size: 1.2rem;
         width: 300px;
     }
     .text{
+        font-size: 1.0rem;
         width: 300px;
     }
 
