--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     background: #ffffff;
     font-size: 62.5%;
     font-family: 'Noto Sans', sans-serif;
+    color: #272727;
 }
 
 .header{
