--- a/css/contents.css
+++ b/css/contents.css
@@ -122,6 +122,10 @@ hr {
     color: #272727;
 }
 
+.underline{
+    background: linear-gradient(transparent 70%, #fcd61d 70%);
+}
+
 /*footerにまつわるスタイル*/
 .footer{
     background: #f9f9f9;
