--- a/css/contents.css
+++ b/css/contents.css
@@ -122,9 +122,11 @@ hr {
     color: #272727;
 }
 
+/*
 .underline{
     background: linear-gradient(transparent 70%, #fcd61d 70%);
 }
+*/
 
 /*footerにまつわるスタイル*/
 .footer{
