[FIX] Change Header Text CSS

--- a/css/about.css
+++ b/css/about.css
@@ -206,6 +206,7 @@
     .heading{
       font-size: 48px;
       margin: 360px auto;
+      font-family: 'Noto Sans', sans-serif;
     }
     .about__contents{
       width: 320px;
