--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -309,6 +309,7 @@ html, body{
       font-size: 24px;
       left: 24px;
       bottom: 106px;
+      font-family: 'Noto Sans', sans-serif;
     }
     .workCategory{
       font-size: 12px;
