--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -320,7 +320,7 @@ html, body{
       background-blend-mode: multiply;
       background-position: center;
       background-repeat: no-repeat;
-      background-attachment:scroll
+      background-attachment:scroll;
       background-size: cover;
     }
 
