--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -301,7 +301,7 @@ html, body{
       background-blend-mode: multiply;
       background-position: center;
       background-repeat: no-repeat;
-      background-attachment:scroll
+      background-attachment:scroll;
       background-size: cover;
     }
 
@@ -310,7 +310,7 @@ html, body{
       background-blend-mode: multiply;
       background-position: center;
       background-repeat: no-repeat;
-      background-attachment:scroll
+      background-attachment:scroll;
       background-size: cover;
     }
 
