--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -138,7 +138,7 @@ html, body{
   width: 466px;
   font-size: 16px;
   line-height: 32px;
-  color: #272727;
+  color: #4a4a4a;
   font-weight: 400;
   margin-bottom: 16px;
 }
@@ -210,7 +210,7 @@ html, body{
   line-height: 32px;
   font-size: 16px;
   line-height: 32px;
-  color: #272727;
+  color: #4a4a4a;
   font-weight: 400;
   margin-bottom: 16px;
 }
