--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -283,7 +283,8 @@ html, body{
       font-size: 18px;
       color: #272727;
       font-weight: 600;
-      margin-bottom: 14px;
+      margin-bottom: 12px;
+      line-height: 24px;
     }
 
     .overview__text{
