画像間違えた修正

--- a/css/work_detail.css
+++ b/css/work_detail.css
@@ -432,7 +432,7 @@ html, body{
       background-size: cover;
     }
     .hiveImg{
-      background: rgba(39, 39, 39, 0.1) url("../images/home/scrapboard.png");
+      background: rgba(39, 39, 39, 0.1) url("../images/home/hive_home.png");
       background-blend-mode: multiply;
       background-position: center;
       background-repeat: no-repeat;
