--- a/css/work.css
+++ b/css/work.css
@@ -3,7 +3,7 @@
   font-size: 72px;
   color: #272727;
   display: block;
-  margin: 160px auto;
+  margin: 40px auto;
   margin-top: 320px;
   text-align: center;
   font-family: 'Noto Sans', sans-serif;
@@ -43,9 +43,16 @@
   height: 260px;
   border-radius: 20px;
   background: #fcfcfc;
-  box-shadow: 0px 0px 4px 0px rgba(39,39,39,0.2);
-	/* left: -30px;
-	top: 0px; */
+  box-shadow: 0px 0px 4px 0px rgba(155,155,155,0.2);
+  transition: 0.2s;
+  transition-timing-function:ease-out;
+}
+
+
+
+
+.swiper-slide:hover .contents__bg{
+  box-shadow: 0px 0px 20px 0px rgba(155,155,155,0.2);
 }
 
 .trim{
@@ -89,6 +96,7 @@
   font-weight: 400;
   text-decoration: none;
 }
+
 
 
 
